force-app/main/default/objects/LAD_Financial_Document__c/LAD_Financial_Document__c.object-meta.xml
<CustomObject>
    <description>Implementation of the Financial documents for Laddaw B2B platform. FOUK-10357</description>
    <label>Financial Document</label>
    <nameField>
        <displayFormat>FIN-{0000000}</displayFormat>
        <label>Financial Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>