force-app/main/default/objects/LAD_Financial_Document__c/fields/LAD_Account__c.field-meta.xml
<CustomField>
    <fullName>LAD_Account__c</fullName>
    <description>Master-Detail relationship with Account Object. FOUK-10357</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Documents</relationshipLabel>
    <relationshipName>Financial_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>