force-app/main/default/objects/LAD_Financial_Document__c/fields/LAD_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>LAD_Document_Number__c</fullName>
    <description>FOUK-10357: To store the Document Number.</description>
    <displayFormat>2{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Document Number</label>
    <type>AutoNumber</type>
</CustomField>