force-app/main/default/objects/LAD_Financial_Document__c/fields/LAD_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>LAD_Document_URL__c</fullName>
    <description>To store the URL of the Document. FOUK-10357</description>
    <label>Document URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>