force-app/main/default/objects/LAD_Financial_Document__c/fields/LAD_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>LAD_Due_Date__c</fullName>
    <description>To store the Due date of Financial Document. FOUK-10357</description>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>