force-app/main/default/objects/LAD_Financial_Document__c/fields/LAD_Oracle_Id__c.field-meta.xml
<CustomField>
    <fullName>LAD_Oracle_Id__c</fullName>
    <description>FOUK-10523: Created to store Id returned by Oracle as response to Invoice Creation API</description>
    <label>Oracle Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>