force-app/main/default/objects/LAD_Financial_Document__c/fields/LAD_Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>LAD_Order_Summary__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup Relation with the Order Summary object. FOUK-10357</description>
    <label>Order Summary</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>Financial Documents</relationshipLabel>
    <relationshipName>Financial_Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>