force-app/main/default/objects/LAD_Financial_Document__c/fields/LAD_Related_Document__c.field-meta.xml
<CustomField>
    <fullName>LAD_Related_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Relation with LAD_Fianancia_Document__c Object with Validation rule related to LAD_Type__c field. FOUK-10357</description>
    <label>Related Document</label>
    <referenceTo>LAD_Financial_Document__c</referenceTo>
    <relationshipLabel>Financial Documents</relationshipLabel>
    <relationshipName>Financial_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>