force-app/main/default/objects/LAD_Financial_Document__c/fields/LAD_Return_Order__c.field-meta.xml
<CustomField>
    <fullName>LAD_Return_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-10472: Created to store reference to Return records for Credit Notes</description>
    <label>Return Order</label>
    <referenceTo>LAD_Return__c</referenceTo>
    <relationshipLabel>Financial Documents</relationshipLabel>
    <relationshipName>Financial_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>