force-app/main/default/objects/LAD_Financial_Document__c/fields/LAD_Status__c.field-meta.xml
<CustomField>
    <fullName>LAD_Status__c</fullName>
    <description>To store the multiple value of Status. FOUK-10357</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>