force-app/main/default/objects/LAD_Financial_Document__c/fields/LAD_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>LAD_Total_Amount__c</fullName>
    <description>To store the Total amount Price. FOUK-10357</description>
    <label>Total Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>