force-app/main/default/objects/LAD_Financial_Document__c/fields/LAD_Type__c.field-meta.xml
<CustomField>
    <fullName>LAD_Type__c</fullName>
    <description>To show the type of Financial Document. FOUK-10357</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>