force-app/main/default/objects/LAD_Financial_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAD_Type__c</columns>
    <columns>LAD_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAD_Return_Order__c</columns>
    <columns>LAD_Order_Summary__c</columns>
    <columns>LAD_Due_Date__c</columns>
    <columns>LAD_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>